# s3mio

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/s3mio/: __init__.py  _types.py  bucket.py  client.py  exceptions.py  retry.py
tests/: conftest.py  test_batch.py  test_bucket.py  test_file_io.py  test_head.py  test_presign.py  test_retry.py  test_streaming.py  test_tags.py
