[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3mio"
version = "0.1.0"
description = "Pythonic S3 wrapper for AWS — clean API over boto3"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Antonio Rodriguez", email = "luis.documentos1706@gmail.com" }
]
keywords = ["s3", "aws", "boto3", "storage", "object-storage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest", "moto[s3]", "pytest-cov", "ruff", "mypy"]

[project.urls]
Repository = "https://github.com/Antonipo/s3mio"
Issues = "https://github.com/Antonipo/s3mio/issues"
Changelog = "https://github.com/Antonipo/s3mio/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/s3mio"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "moto[s3]>=5.1.22",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]
